# mango

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.txt  benchmark.txt  license  mango-config.cmake.in  meson.build  meson_options.txt  preset.sh  vcpkg.json
cmake/: mango_find_module.cmake  mango_libraries.cmake  mango_simd.cmake
docs/: setup.md
docs/examples/: examples.md  filesystem.md  image.md
docs/installation/: setup.md
example/: CMakeLists.txt  meson.build  meson.copy.py
example/benchmark/jpeg/: jpeg_test.cpp
example/benchmark/webp/: webp_test.cpp
example/framebuffer/: CMakeLists.txt  animation.cpp  framebuffer.cpp  mandelbrot.cpp
example/image/: CMakeLists.txt  bulk_decode.cpp
example/image/async_decode/: async_decode.cpp
example/image/blitter/: blitter.cpp
example/image/icc/: p3.cpp
example/image/jpeg/: jpeg.cpp
example/image/jpeg_benchmark/: jpeg_benchmark.cpp
example/image/jpeg_benchmark/jpeg-compressor/: jpgd.cpp  jpge.cpp
example/image/jpeg_benchmark/jpegdec/: JPEGDEC.h  jpeg.c
example/image/jpeg_debugger/: jpeg_debugger.cpp
example/image/jpeg_reader/: jpeg_reader.cpp
example/image/palette/: palette.cpp
example/image/png_benchmark/: png_benchmark.cpp
example/image/png_benchmark/fpng/: Crc32.cpp  Crc32.h  fpng.cpp
example/image/png_benchmark/fpnge/: fpnge.h
example/image/png_benchmark/lodepng/: lodepng.cpp
example/image/png_benchmark/rpng/: rpng.h
example/image/webp/: webp.cpp
example/misc/: CMakeLists.txt  aes.cpp  bitmap.cpp  checksum.cpp  compress.cpp  concurrency.cpp  endian.cpp  filesystem.cpp  hash.cpp  math.cpp  memory.cpp
example/opengl/: CMakeLists.txt  animation.cpp  basic.cpp  compute.cpp  cubemap.cpp  glfb.cpp  gltest.cpp  imageview.cpp  jpeg_compute.cpp  mandelbrot.cpp  srgb.cpp
example/test/: CMakeLists.txt  aes.cpp  checksum.cpp  compress.cpp  hash.cpp  mathtest.cpp  particle.cpp  pathtest.cpp  threads.cpp
example/test/data/foo/: test.txt
example/utils/: CMakeLists.txt  image_encoder.cpp  snitch.cpp  unsnitch.cpp
example/x/test/: checksum
examples/: CMakeLists.txt
examples/image/: CMakeLists.txt  async_decode.cpp  bulk_decode.cpp  palette.cpp
examples/image/jpeg_benchmark/: jpeg_benchmark.cpp
examples/image/jpeg_benchmark/jpeg-compressor/: jpgd.cpp  jpge.cpp
examples/image/jpeg_benchmark/toojpeg/: toojpeg.cpp
examples/image/png_benchmark/: png_benchmark.cpp
examples/image/png_benchmark/fpng/: fpng.cpp
examples/image/png_benchmark/fpnge/: fpnge.cpp
examples/image/png_benchmark/spng/: spng.c
examples/misc/: CMakeLists.txt  endian.cpp  math.cpp  memory.cpp
examples/opengl/: CMakeLists.txt  animation.cpp  basic.cpp  bicubic.cpp  compute.cpp  cubemap.cpp  imageview.cpp  mandelbrot.cpp  srgb.cpp
examples/test/: CMakeLists.txt  aes.cpp  cache.cpp  checksum.cpp  compress.cpp  container.cpp  hash.cpp  mathtest.cpp  pathtest.cpp  threads.cpp
examples/test/data/: case.hbs  case.snitch
examples/test/data/foo/: test.data
examples/utils/: CMakeLists.txt  hcompress.cpp  hdecompress.cpp  image_encoder.cpp  snitch.cpp  unsnitch.cpp
examples/vulkan/: CMakeLists.txt  basic.cpp  font.cpp  shadertoy.cpp  vkbasic.cpp  wobble.cpp
examples/vulkan/data/: OFL.txt
examples/vulkan/data/shadertoy/: ChocolatePackage.comp  InsideMandelbulb.comp  MandelbulbI.comp  MarsTerrain.comp  MorphingAbstract.comp  PBRMandelbulb.comp  StarNest.comp  TwinklingTunnel.comp
include/mango/: mango.hpp
include/mango/core/: adler32.hpp  aes.hpp  atomic.hpp  bits.hpp  buffer.hpp  compress.hpp  configure.hpp  container.hpp  core.hpp  cpuinfo.hpp  crc32.hpp  dynamic_library.hpp  endian.hpp  exception.hpp  half.hpp  hash.hpp  library.hpp  memory.hpp  object.hpp  pointer.hpp  print.hpp  stream.hpp  string.hpp  system.hpp  thread.hpp  timer.hpp
include/mango/filesystem/: file.hpp  fileindex.hpp  fileobserver.hpp  filesystem.hpp  hbs.hpp  mapper.hpp  path.hpp
include/mango/fmt/: color.h  format.h
include/mango/framebuffer/: framebuffer.hpp
include/mango/gui/: gui.hpp  window.hpp
include/mango/image/: bicubic.hpp  blitter.hpp  color.hpp  compression.hpp  decoder.hpp  encoder.hpp  exif.hpp  format.hpp  fourcc.hpp  header.hpp  image.hpp  quantize.hpp  surface.hpp
include/mango/import3d/: import3d.hpp  import_3ds.hpp  import_fbx.hpp  import_gltf.hpp  import_lwo.hpp  import_obj.hpp  mesh.hpp
include/mango/math/: accessor.hpp  geometry.hpp  math.hpp  matrix.hpp  matrix3x3.hpp  matrix4x4.hpp  matrix_float4x4.hpp  quaternion.hpp  spline.hpp  srgb.hpp  vector.hpp  vector128_int16x8.hpp  vector128_int32x4.hpp  vector128_int64x2.hpp  vector128_int8x16.hpp  vector128_uint16x8.hpp  vector128_uint32x4.hpp  vector128_uint64x2.hpp  vector128_uint8x16.hpp  vector256_int16x16.hpp  vector256_int32x8.hpp  vector256_int64x4.hpp  vector256_int8x32.hpp  vector256_uint16x16.hpp  vector256_uint32x8.hpp  vector256_uint64x4.hpp  vector256_uint8x32.hpp  vector512_int16x32.hpp  vector512_int32x16.hpp  vector512_int64x8.hpp  vector512_int8x64.hpp  vector512_uint16x32.hpp  vector512_uint32x16.hpp  vector512_uint64x8.hpp  vector512_uint8x64.hpp  vector_double2.hpp  vector_double4.hpp  vector_float16x4.hpp  vector_float2.hpp  vector_float3.hpp  (+21 more)
include/mango/opengl/: context.hpp  framebuffer.hpp  jpeg_decoder.hpp  opengl.hpp  opengl_api.hpp  utilities.hpp
include/mango/simd/: altivec_128_float.hpp  altivec_128_int.hpp  altivec_convert.hpp  altivec_double128.hpp  altivec_float.hpp  avx_double.hpp  (+136 more)
scripts/: meson.build  meson_options.txt  readme.txt
scripts/android/jni/: Application.mk
source/bc/: BC.cpp  BC.h  BC4BC5.cpp  BC6HBC7.cpp
source/bzip2/: bzlib.c  bzlib.h  bzlib_private.h
source/google/: astc.cpp  astc.hpp  etc.hpp
source/jpeg/: decode.cpp  encode.cpp  jpeg.hpp  process.cpp
source/lzfse/: lzfse_decode_base.c  lzfse_encode_base.c  lzfse_fse.c  lzfse_internal.h  lzvn_decode_base.c
source/miniz/: miniz.cpp
source/unrar/: crypt.cpp  crypt.hpp  model.hpp  rar.hpp  rdwrfn.cpp  rdwrfn.hpp  unpack.cpp  unpack.hpp
text/: benchmark.txt  licenses.txt  readme.txt  vectormath.txt  x86-linux-gnu.cross
(+240 files in other folders)
